@@ -9,6 +9,10 @@ will not be SIMD-accelerated when using any of these scaling factors.
 platforms.  This speeds up the decompression of 4:2:2 JPEGs by 20-25% on such
 platforms.
 
+[3] Added ARM v6 and ARM v7 architectures to libjpeg.a and libturbojpeg.a in
+the official OS X distribution package, so that those libraries can be used to
+build both OS X and iOS applications.
+
 
 1.2.0
 =====
